--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "headlessui": "^0.0.0",
     "heroicons": "^2.1.5",
     "install": "^0.13.0",
+    "material-ui-popup-state": "^5.1.2",
     "npm": "^10.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
