--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.13",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
     "@mui/icons-material": "^5.16.4",
@@ -26,7 +27,7 @@
     "react-dom": "^18.3.1",
     "react-router": "^6.25.0",
     "react-router-dom": "^6.25.0",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
