--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.0.13",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
@@ -39,7 +40,6 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.6",
     "vite": "^5.3.1"
   }
 }
