--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "formik": "^2.4.6",
     "headlessui": "^0.0.0",
     "heroicons": "^2.1.5",
     "install": "^0.13.0",
@@ -28,7 +29,8 @@
     "react-dom": "^18.3.1",
     "react-router": "^6.25.0",
     "react-router-dom": "^6.25.0",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
